[tool.poetry]
name = "case-style-changer"
version = "0.1.2"
description = "Case Style Changer - a CLI."
authors = ["xkumiyu <xkumiyu@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/xkumiyu/case-style-changer"
homepage = "https://github.com/xkumiyu/case-style-changer"
packages = [
    { include = "case_style_changer" }
]
include = ["CHANGELOG.md"]
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
pytest-watch = "^4.2.0"
pytest-cov = "^2.8.1"
pytest-mock = "^1.13.0"
flake8 = "^3.7.9"
hacking = "^2.0.0"
yapf = "^0.29.0"

[tool.poetry.scripts]
csc = "case_style_changer.cli:main"
case_style_changer = "case_style_changer.cli:main"

[tool.isort]
force_single_line = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
