[tool.poetry]
name = "case-style-changer"
version = "0.1.3"
description = "Case Style Changer - a CLI tool that guesses the case of the input string and converts it to another case."
authors = ["xkumiyu <xkumiyu@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/xkumiyu/case-style-changer"
homepage = "https://github.com/xkumiyu/case-style-changer"
packages = [
    { include = "case_style_changer" }
]
include = ["CHANGELOG.md"]
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
hacking = "^2.0.0"
pre-commit = "^1.20.0"
pytest = "^5.3.2"
pytest-watch = "^4.2.0"
pytest-cov = "^2.8.1"
tox = "^3.14.3"

[tool.poetry.scripts]
csc = "case_style_changer.cli:main"
case_style_changer = "case_style_changer.cli:main"

[tool.isort]
force_single_line = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
